--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.less"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
