--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.2.4",
     "mongoose-unique-validator": "^5.0.0",
     "ngx-translate-multi-http-loader": "^17.0.0",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
