--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "angular-calendar": "^0.31.0",
+    "angularx-flatpickr": "^7.3.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
