--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "mongoose-unique-validator": "^5.0.0",
     "ngx-translate-multi-http-loader": "^17.0.0",
