--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "mongoose-unique-validator": "^5.0.0",
