--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
