--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start/frontend": "ng serve",
-    "start/backend": "node server.js",
+    "start": "ng serve",
     "dev": "nodemon server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
